# ai-vid-edit

./: .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  llms.txt
.cursor/commands/: push.md
.githooks/: commit-msg  pre-commit
.github/: dependabot.yml  pull_request_template.md
0-docs/: PRD.md
podcast-video-editor/: .podcast-editor.json  README.md  ai-video-editor-completion.sh  ai-video-editor.sh  pyproject.toml  temp_script.sh
podcast-video-editor/helpers/: command_generator.sh  completion.sh  diagnostic.sh  environment.sh  language_settings.sh  output_settings.sh  preview_settings.sh  quality_settings.sh  utils.sh  video_file.sh  video_settings.sh
podcast-video-editor/src/podcast_video_editor/: __init__.py  cli_main.py  config.py  processor.py  web.py
podcast-video-editor/src/podcast_video_editor/commands/: __init__.py  configure.py  preview.py  process.py
podcast-video-editor/src/podcast_video_editor/config/: __init__.py  manager.py  models.py
podcast-video-editor/src/podcast_video_editor/processing/: __init__.py  audio_processing.py  fallback_silence_detector.py  ffmpeg_silence_detector.py  models.py  segment_extractor.py  silence_detection.py  video_concatenator.py  video_processing.py
podcast-video-editor/src/podcast_video_editor/templates/: index.html
podcast-video-editor/src/podcast_video_editor/web_app/: __init__.py  app.py  background_processor.py  download_routes.py  routes.py  status_routes.py  upload_routes.py  utils.py
scripts/: setup-repo.sh
website/: index.html  styles.css
(+25 files in other folders)
