[project]
name = "podcast-video-editor"
version = "0.1.0"
description = "AI-powered video editing platform that automatically transforms raw podcast recordings into polished, professional videos"
authors = [
    {name = "Podcast Video Editor Team"}
]
requires-python = ">=3.11"
dependencies = [
    "openai-whisper>=20240930",
    "ffmpeg-python>=0.2.0",
    "numpy>=1.24.0",
    "click>=8.0.0",
    "tqdm>=4.67.3",
    "python-dotenv>=1.0.0",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "celery>=5.3.0",
    "redis>=7.4.0",
    "werkzeug>=3.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/podcast_video_editor"]

[project.scripts]
podcast-editor = "podcast_video_editor.cli_main:main"
podcast-editor-web = "podcast_video_editor.web:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
